--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@ var _gaq = _gaq || {'push':function(){}} //here for testing. REPLACE BEFORE DEPL
 var myCreole;
 
 var app = {vars:{
-	"release":"20121116003200",  //increment this with each change. should solve caching issues. format: YYYYMMDDHHMMSS
+	"release":"201211271530",  //increment this with each change. should solve caching issues. format: YYYYMMDDHHMMSS
 	"baseURL":"",
-	"httpsURL":"https://ssl.zoovy.com/s=www.sporks.zoovy.com/",
-	"httpURL":"http://www.sporks.zoovy.com/"
+	"httpsURL":"https://ssl.zoovy.com/s=www.downlitebedding.com/",
+	"httpURL":"http://www.downlitebedding.com/"
 	},u:{},rq:[]};
 
 //set base url so images, css, js, etc all load from appropriate location once deployed.
@@ -40,6 +40,7 @@ all css includes need to be after the js that changes the base url.
 css files should be included before any .js file to ensure they are downloaded in parallel
 -->
 <link rel="stylesheet" type="text/css" href="qs_styles.css" />
+<link rel="stylesheet" type="text/css" href="_shadow_styles.css" />
 <link rel="stylesheet" type="text/css" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/redmond/jquery-ui.css" />
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
@@ -56,14 +57,6 @@ app.u.loadScript(app.vars.baseURL+"init.js");
 </head>
 
 <body>
-<!-- DELETE THIS WHEN YOU GET STARTED -->
-<h1>WELCOME TO QUICKSTART</h1>
-This file is intended to go along with the 10-step tutorial at: 
-<a href="https://github.com/zoovy/AnyCommerce-Development/wiki/quickstart">https://github.com/zoovy/AnyCommerce-Development/wiki/quickstart</a>
-<!-- /DELETE THIS WHEN YOU GET STARTED -->
-
-
-
 
 <!-- what is displayed onLoad until the view is loaded -->
 <div id='appPreView'>
@@ -89,6 +82,27 @@ This file is intended to go along with the 10-step tutorial at:
 <div id='appView' class='displayNone'>
 
 <!-- VIEW CONTENT -->
+<div id='header'>
+	<div id='logo'> </div>
+	<div id='header-right'>
+		<div id='header-decal'> </div>
+		<div id='header-links'>
+			<a href='#' onClick="return showContent('customer',{'show':'myaccount'});">My Account</a> | <a href='#' onClick="return showContent('company',{'show':'contact'});">Contact</a> | <a href='#' onClick="return showContent('company',{'show':'faq'});">FAQ</a> | <span class='cartspan'>Cart:</span> <a href='#' onClick="return showContent('cart',{});"><span class="cartItemCount">0</span></a>
+			<span class='phonespan'>Questions? Call us at 888.888.8888</span>
+		</div>
+		<div id='header-search-frame'>
+			<form id='headerSearchFrm' name='headerSearchFrm' action='#' class='productSearchForm' method="get">
+				<div id='header-search'>
+					<input type='search' name='KEYWORDS' id='searchKwdField' class="productSearchKeyword handleDefault" value='Enter Search Term' />
+					<input class="search" id='searchButton' type="submit" value="" />
+				</div>
+			</form>
+		</div>
+	</div>
+</div>
+<div id='category-nav'>
+	<ul id='tier1categories'> </ul>
+</div>
 <!-- leave the appView div, put your your html here ...  -->
 
 	<!-- 
