--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ var _gaq = _gaq || {'push':function(){}} //here for testing. REPLACE BEFORE DEPL
 var myCreole;
 
 var app = {vars:{
-	"release":"201211271530",  //increment this with each change. should solve caching issues. format: YYYYMMDDHHMMSS
+	"release":"201211282138",  //increment this with each change. should solve caching issues. format: YYYYMMDDHHMMSS
 	"baseURL":"",
 	"httpsURL":"https://ssl.zoovy.com/s=www.downlitebedding.com/",
 	"httpURL":"http://www.downlitebedding.com/"
@@ -101,7 +101,9 @@ app.u.loadScript(app.vars.baseURL+"init.js");
 	</div>
 </div>
 <div id='category-nav'>
-	<ul id='tier1categories'> </ul>
+	<div class='inner'>
+		<ul id='tier1categories'> </ul>
+	</div>
 </div>
 <!-- leave the appView div, put your your html here ...  -->
 
@@ -111,8 +113,51 @@ app.u.loadScript(app.vars.baseURL+"init.js");
 	-->
 <div id='globalMessaging' class='appMessaging'></div><!-- DO NOT REMOVE - used for some high level error handling (usually appears below breadcrumb nav or top bar) -->
 <div id='mainContentArea'></div><!-- DO NOT REMOVE - this is where the specific page (ex: homepage, product, category) content is going to go -->
+<div id='footer'>
+	<div id='cslinks'>
+		<h3>Customer Service</h3>
+			<a href="#" onClick="return showContent('company',{'show':'contact'});">Contact Us</a>
+			<a href="#" onClick="return showContent('company',{'show':'faq'});">FAQ</a>
+			<a href="#" onClick="return showContent('cart',{});">View Cart</a>
+			<a href="#" onClick="return showContent('company',{'show':'return'});">Return Policy</a>
+			<a href="#" onClick="return showContent('customer',{'show':'orders'});">Order Status</a>
+			<a href="#">Checkout</a>
+			<a href="#" onClick="return showContent('customer',{'show':'myaccount'});">My Account</a>
+			<a href="#" onClick="return showContent('company',{'show':'newsletter'});">Email Preferences</a>
+			<a href="#" onClick="return showContent('company',{'show':'privacy'});">Privacy Policy</a>
+	</div>
+	<div id='sociallinks'>
+		<h3>Social Networks</h3>
+			<a href="#">MySpace</a>
+			<a href="#">Facebook</a>
+			<a href="#">Twitter</a>
+			<a href="#">LinkedIn</a>
+			<a href="#">YouTube</a>
+	</div>
+	<div id='footsub'>
+		<h3>Subscribe &amp; Save</h3>
+		<form action='#' id='subscribeFrm' name='subscribeFrm' onSubmit="app.ext.store_crm.u.handleSubscribe('subscribeFrm'); return false">
+		<fieldset class='userInfo borderNone'>
+		<div>
+		<label for='subscribeLogin'>Email Address</label>
+		<input type='email'  maxlength='50' size='30' name='login' id='subscribeLogin' value='' />
+		</div>
 
+		<div>
+		<label for='subscribeFullname'>Full Name</label>
+		<input type='text'  maxlength='50' size='30' name='fullname' id='subscribeFullname' value='' />
+		</div>
+		</fieldset>
 
+		<fieldset data-bind="var:newsletters(@lists); format:subscribeCheckboxes; extension:store_crm;" class='borderNone subscriberLists'></fieldset>
+
+		<input type='submit' class='ui-button-text ui-button ui-state-default ui-corner-all' value='Subscribe'>
+
+		</form>
+	
+	</div>
+</div>
+<div id='footer-decal'> </div>
 <!-- ... your html ends -->
 <!-- /VIEW CONTENT -->
 </div>
@@ -218,10 +263,7 @@ don't modify the 'data-templateid' unless you are changing template names and up
 
 
 <li id='categoryListTemplateRootCats'>
-	<div onClick="showContent('category',{'navcat':$(this).parent().attr('data-catsafeid')});" class='pointer'>
-		<div class='thumbContainer'><img src='blank.gif' class='catThumb' data-bind='var: category(%meta.CAT_THUMB); format:imageURL;' width='35' height='35' /></div>
-		<div class='catName'><span data-bind='var: category(pretty); format:text;'></span></div>
-	</div>
+	<a data-bind='var: category(pretty); format:text;' href='#' onClick="showContent('category',{'navcat':$(this).parent().attr('data-catsafeid')});"></a>
 </li>
 
 </ul>
