--- a/quickstart.html
+++ b/quickstart.html
@@ -20,10 +20,10 @@ var _gaq = _gaq || {'push':function(){}} //here for testing. REPLACE BEFORE DEPL
 var myCreole;
 
 var app = {vars:{
-	"release":"201211291107",  //increment this with each change. should solve caching issues. format: YYYYMMDDHHMMSS
+	"release":"20121116003200",  //increment this with each change. should solve caching issues. format: YYYYMMDDHHMMSS
 	"baseURL":"",
-	"httpsURL":"https://ssl.zoovy.com/s=www.downlitebedding.com/",
-	"httpURL":"http://www.downlitebedding.com/"
+	"httpsURL":"https://ssl.zoovy.com/s=www.sporks.zoovy.com/",
+	"httpURL":"http://www.sporks.zoovy.com/"
 	},u:{},rq:[]};
 
 //set base url so images, css, js, etc all load from appropriate location once deployed.
@@ -40,8 +40,7 @@ all css includes need to be after the js that changes the base url.
 css files should be included before any .js file to ensure they are downloaded in parallel
 -->
 <link rel="stylesheet" type="text/css" href="qs_styles.css" />
-<link rel="stylesheet" type="text/css" href="jquery-ui-1.9.2.custom.min.css" />
-<link rel="stylesheet" type="text/css" href="_shadow_styles.css" />
+<link rel="stylesheet" type="text/css" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/redmond/jquery-ui.css" />
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 <script type="text/javascript" src="loadscript.js"></script>
@@ -57,6 +56,14 @@ app.u.loadScript(app.vars.baseURL+"init.js");
 </head>
 
 <body>
+<!-- DELETE THIS WHEN YOU GET STARTED -->
+<h1>WELCOME TO QUICKSTART</h1>
+This file is intended to go along with the 10-step tutorial at: 
+<a href="https://github.com/zoovy/AnyCommerce-Development/wiki/quickstart">https://github.com/zoovy/AnyCommerce-Development/wiki/quickstart</a>
+<!-- /DELETE THIS WHEN YOU GET STARTED -->
+
+
+
 
 <!-- what is displayed onLoad until the view is loaded -->
 <div id='appPreView'>
@@ -82,29 +89,6 @@ app.u.loadScript(app.vars.baseURL+"init.js");
 <div id='appView' class='displayNone'>
 
 <!-- VIEW CONTENT -->
-<div id='header'>
-	<div id='logo'> </div>
-	<div id='header-right'>
-		<div id='header-decal'> </div>
-		<div id='header-links'>
-			<a href='#' onClick="return showContent('customer',{'show':'myaccount'});">My Account</a> | <a href='#' onClick="return showContent('company',{'show':'contact'});">Contact</a> | <a href='#' onClick="return showContent('company',{'show':'faq'});">FAQ</a> | <a href='#' onClick="return showContent('cart',{});"><span class='cartspan'>Cart:</span> <span class="cartItemCount"> </span></a>
-			<span class='phonespan'>Questions? Call us at 888.888.8888</span>
-		</div>
-		<div id='header-search-frame'>
-			<form id='headerSearchFrm' name='headerSearchFrm' action='#' class='productSearchForm' method="get">
-				<div id='header-search'>
-					<input type='search' name='KEYWORDS' id='searchKwdField' class="productSearchKeyword handleDefault" value='Enter Search Term' />
-					<input class="search" id='searchButton' type="submit" value="" />
-				</div>
-			</form>
-		</div>
-	</div>
-</div>
-<div id='category-nav'>
-	<div class='inner'>
-		<ul id='tier1categories'> </ul>
-	</div>
-</div>
 <!-- leave the appView div, put your your html here ...  -->
 
 	<!-- 
@@ -113,49 +97,8 @@ app.u.loadScript(app.vars.baseURL+"init.js");
 	-->
 <div id='globalMessaging' class='appMessaging'></div><!-- DO NOT REMOVE - used for some high level error handling (usually appears below breadcrumb nav or top bar) -->
 <div id='mainContentArea'></div><!-- DO NOT REMOVE - this is where the specific page (ex: homepage, product, category) content is going to go -->
-<div id='footer'>
-	<div id='cslinks'>
-		<h3>Customer Service</h3>
-			<a href="#" onClick="return showContent('company',{'show':'contact'});">Contact Us</a>
-			<a href="#" onClick="return showContent('company',{'show':'faq'});">FAQ</a>
-			<a href="#" onClick="return showContent('cart',{});">View Cart</a>
-			<a href="#" onClick="return showContent('company',{'show':'return'});">Return Policy</a>
-			<a href="#" onClick="return showContent('customer',{'show':'orders'});">Order Status</a>
-			<a href="#" onclick="showContent('checkout',{});">Checkout</a>
-			<a href="#" onClick="return showContent('customer',{'show':'myaccount'});">My Account</a>
-			<a href="#" onClick="return showContent('company',{'show':'newsletter'});">Email Preferences</a>
-			<a href="#" onClick="return showContent('company',{'show':'privacy'});">Privacy Policy</a>
-	</div>
-	<div id='sociallinks'>
-		<h3>Social Networks</h3>
-			<a href="#" target="_blank">MySpace</a>
-			<a href="#" target="_blank">Facebook</a>
-			<a href="#" target="_blank">Twitter</a>
-			<a href="#" target="_blank">LinkedIn</a>
-			<a href="#" target="_blank">YouTube</a>
-	</div>
-	<div id='footsub'>
-		<h3>Subscribe &amp; Save</h3>
-		<form action='#' id='subscribeFrm' name='subscribeFrm' onSubmit="app.ext.store_crm.u.handleSubscribe('subscribeFrm'); return false">
-		<fieldset class='userInfo borderNone'>
-		<div>
-		<input type='email'  maxlength='50' size='30' name='login' id='subscribeLogin' value='E-mail Address' />
-		</div>
 
-		<div>
-		<input type='text'  maxlength='50' size='30' name='fullname' id='subscribeFullname' value='Full Name' />
-		</div>
-		</fieldset>
 
-		<fieldset data-bind="var:newsletters(@lists); format:subscribeCheckboxes; extension:store_crm;" class='borderNone subscriberLists'></fieldset>
-
-		<input type='submit' class='ui-button-text ui-button ui-state-default ui-corner-all' value='Subscribe'>
-
-		</form>
-	
-	</div>
-</div>
-<div id='footer-decal'> </div>
 <!-- ... your html ends -->
 <!-- /VIEW CONTENT -->
 </div>
@@ -261,7 +204,10 @@ don't modify the 'data-templateid' unless you are changing template names and up
 
 
 <li id='categoryListTemplateRootCats'>
-	<a data-bind='var: category(pretty); format:text;' href='#' onClick="showContent('category',{'navcat':$(this).parent().attr('data-catsafeid')});"></a>
+	<div onClick="showContent('category',{'navcat':$(this).parent().attr('data-catsafeid')});" class='pointer'>
+		<div class='thumbContainer'><img src='blank.gif' class='catThumb' data-bind='var: category(%meta.CAT_THUMB); format:imageURL;' width='35' height='35' /></div>
+		<div class='catName'><span data-bind='var: category(pretty); format:text;'></span></div>
+	</div>
 </li>
 
 </ul>
@@ -1092,7 +1038,7 @@ So the cart template should contain these two elements and the extension should 
 		<span class='ui-icon ui-icon-closethick'></span>
 		</span>
 		
-		<div class='floatLeft'><img src='blank.gif' class='prodThumb' data-bind='var: product(zoovy:prod_image1); defaultVar: product(full_product.zoovy:prod_image1); format:imageURL;' width='75' height='75' /></div>
+		<div class='floatLeft'><img src='blank.gif' class='prodThumb' data-bind='var: product(zoovy:prod_image1); defaultVar: product(%attribs.zoovy:prod_image1); format:imageURL;' width='75' height='75' /></div>
 	
 		<h4 data-bind='var: product(prod_name); format:text; '></h4>
 		
@@ -1106,7 +1052,7 @@ So the cart template should contain these two elements and the extension should 
 
 		</div>
 		
-		<div class='ztable_row_small prodOptions' data-bind='var: variations(*options); format:selectedOptionsDisplay;'></div>
+		<div class='ztable_row_small prodOptions' data-bind='var: variations(%options); format:selectedOptionsDisplay;'></div>
 	</li>
 </ul>
 
