Adding null placeholder back to minicart count

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ app.u.loadScript(app.vars.baseURL+"init.js");
 	<div id='header-right'>
 		<div id='header-decal'> </div>
 		<div id='header-links'>
-			<a href='#' onClick="return showContent('customer',{'show':'myaccount'});">My Account</a> | <a href='#' onClick="return showContent('company',{'show':'contact'});">Contact</a> | <a href='#' onClick="return showContent('company',{'show':'faq'});">FAQ</a> | <a href='#' onClick="return showContent('cart',{});"><span class='cartspan'>Cart:</span> <span class="cartItemCount"> </span></a>
+			<a href='#' onClick="return showContent('customer',{'show':'myaccount'});">My Account</a> | <a href='#' onClick="return showContent('company',{'show':'contact'});">Contact</a> | <a href='#' onClick="return showContent('company',{'show':'faq'});">FAQ</a> | <a href='#' onClick="return showContent('cart',{});"><span class='cartspan'>Cart:</span> <span class="cartItemCount">0</span></a>
 			<span class='phonespan'>Questions? Call us at 888.888.8888</span>
 		</div>
 		<div id='header-search-frame'>
