touch up styling and html code updates.

--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
 			var _gaq = _gaq || {'push':function(){}} //here for testing. REPLACE BEFORE DEPLOYMENT!
 			var myCreole;
 			
-			var app = {vars:{
+			/*var app = {vars:{
 				"release":"20121127102800",  //increment this with each change. should solve caching issues. format: YYYYMMDDHHMMSS
 				"baseURL":"",
 				"httpsURL":"https://ssl.zoovy.com/s=www.stage3motorsports.com/",
 				"httpURL":"http://www.stage3motorsports.com/"
-				},u:{},rq:[]};
+				},u:{},rq:[]};*/
 	
-			/*var app = {vars:{
+			var app = {vars:{
 				"release":"201211261445",  //increment this with each change. should solve caching issues. format: YYYYMMDDHHMMSS
 				"baseURL":"",
 				"httpsURL":"https://ssl.zoovy.com/s=www.downlitebedding.com/",
 				"httpURL":"http://www.downlitebedding.com/"
-				},u:{},rq:[]};	*/
+				},u:{},rq:[]};	
 				
 			/*var app = {vars:{
 				"release":"201211261445",  //increment this with each change. should solve caching issues. format: YYYYMMDDHHMMSS
@@ -86,9 +86,7 @@
 	<div id='appView' class='displayNone'>
 		
 		<div id="header">
-			<!--<img id="logo" src="" height="200" width="200" class="pointer" onClick="return showContent('category',{'navcat' : '.'}); />-->
-			<!--<h1>LOGO</h1>-->
-			<a href="#" onClick="return showContent('company',{'show' : 'about'});"><img id="logo" src="" alt="LOGO" width="198" height="53" /></a>
+			<a href="#" onClick="return showContent('category',{'navcat' : '.'});"><img id="logo" src="" alt="LOGO" width="198" height="53" /></a>
 			<h3>DECAL</h3>
 			<div id="mainNav">
 				<a href="#" onClick="return showContent('company',{'show' : 'about'});">About Us</a>
@@ -105,7 +103,7 @@
 				</form>
 			</div>
 			<div id="contactInfo">
-				<a href="#" onClick="return showContent('customer',{'show' : 'myaccount'});">My Account</a>|<a href="#" onClick="return showContent('company',{'show' : 'contact'});">Contact</a>|<a href="#" onClick="return showContent('customer',{'show' : 'faq'});">FAQ</a>|<a href="#" onClick="return showContent('cart',{});">My Cart</a>|<b>Cart:</b> <span class="cartItemCount"></span>
+				<a href="#" onClick="return showContent('customer',{'show' : 'myaccount'});">My Account</a>|<a href="#" onClick="return showContent('company',{'show' : 'contact'});">Contact</a>|<a href="#" onClick="return showContent('customer',{'show' : 'faq'});">FAQ</a>|<a href="#" onClick="return showContent('cart',{});">My Cart</a>|<a href="#" onClick="return showContent('cart',{});"><b>Cart:</b><span class="cartItemCount"></span></a>
 				<p>Questions? Call us at 888.888.8888</p>
 			</div>
 		</div>
@@ -137,7 +135,7 @@
 					<td><a href="#" onClick="showContent('company',{'show':'return'});">Return Policy</a></td><td><a href="#" onClick="showContent('customer',{'show':'orders'});">Order Status</a></td><td><a href="#" onclick="showContent('checkout',{});">Checkout</a></td>
 				</tr>
 				<tr>
-					<td><a href="#" onClick="return showContent('customer',{'show' : 'myaccount'});">My Account</a></td><td><a href="#">Email Preferences</a></td><td><a href="#" onClick="return showContent('company',{'show' : 'privacy'});">Privacy Policy</a></td>
+					<td><a href="#" onClick="return showContent('customer',{'show' : 'myaccount'});">My Account</a></td><td><a href="#" onClick="return showContent('customer',{'show' : 'myaccount'});">Email Preferences</a></td><td><a href="#" onClick="return showContent('company',{'show' : 'privacy'});">Privacy Policy</a></td>
 				</tr>
 			</table>
 			<table id="socialNetworks">
